--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -8,13 +8,13 @@ jobs:
 
     steps:
       - name: Install npm
-      - uses: "actions/checkout@v3"
-      - uses: "actions/setup-node@v3"
+        uses: "actions/checkout@v3"
+        uses: "actions/setup-node@v3"
         with:
            node-version: 16
-      - package-lock.json:
+        package-lock.json:
             npm install
-      - yarn.lock:
+        yarn.lock:
             yarn --check-files --frozen-lockfile --non-interactive
 
 
