--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -1,4 +1,4 @@
-name: Install node
+name: set up the environment for Node JS
 
 on: [pull_request]
 
@@ -7,16 +7,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Install npm
-        uses: "actions/checkout@v3"
-        uses: "actions/setup-node@v3"
+      - uses: actions/checkout@v3
+
+      - name: Setup Node 16.x
+        uses: actions/setup-node@v3
         with:
-           node-version: 16
-        package-lock.json:
-            npm install
-        yarn.lock:
-            yarn --check-files --frozen-lockfile --non-interactive
+          node-version: 16.x
+          cache: npm
 
+      - name: Install dependencies
+        run: npm ci
 
-
-
+      - name: Creating a build directory
+        run: npm run build
