--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -8,15 +8,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-
-      - name: Setup Node 16.x
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 16.x
-          cache: npm
-
+          node-version: '16'
+          cache: 'npm'
+          
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Creating a build directory
         run: npm run build
