--- a/.github/workflows/files-changed.yaml
+++ b/.github/workflows/files-changed.yaml
@@ -1,37 +1,30 @@
-name: "Files Changed"
+name: CI
 
-on: [pull_request_target]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  check-changed-and-modifed-files:
-    runs-on: "ubuntu-latest"
-
+  build:
+    runs-on: ubuntu-latest
+    name: Test changed-files
     steps:
-    - name: "Checkout ${{ github.repository }} repository"
-      uses: "actions/checkout@v3"
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 2
 
-    - name: "Look for added, changed and modified files in ${{ github.repository }}, PR - ${{ github.event.number }}"
-      uses: "tj-actions/changed-files@v34"
-      id: "changed-files"
-      with:
-          files: |
-            .github/workflows
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v35
+        with:
+          since_last_remote_commit: true
 
-    - name: "List all changed and modified files, if there are any"
-      run: |
-       for file in ${{ steps.changed-files.outputs.all_changed_and_modified_files }}; do
-          echo "$file"
-        done
-      if: ${{ steps.changed-files.outputs.all_changed_and_modified_files }}
-
-    - name: "Comment PR if there are any modified files"
-      uses: "thollander/actions-comment-pull-request@v2"
-      with:
-        message: |
-          Hello ${{ github.actor }} :wave:
-          Fyi, We see following files have been modified in ${{ github.repository }}
-
-          ```
-          ${{ steps.changed-files.outputs.modified_files }}
-          ```
-      if: ${{ steps.changed-files.outputs.all_changed_and_modified_files }}
+      - name: List all changed files
+        run: |
+          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+            echo "$file was changed"
+          done
